--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "xcb-util-wm-0.4.1.tar.bz2": 7006c52b961c123355320bfc30477cdf90c8bbb7
+  xcb-util-wm-0.4.2.tar.xz: ac46ab2e00980524175dae9f14542f35fdade782
